# projeto_dia_firmware

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  main.c  nvs_handler.h
main/conn/inc/: http_server.h  wifi.h  wifi_app.h
main/conn/src/: http_server.c  wifi.c  wifi_app.c  wifi_conn.c
main/core/inc/: led.h  main.h  tasks_common.h
main/core/src/: led.c  main.c
main/sensor/inc/: sensor.h  sensor_ch1.h  setpoints.h
main/sensor/src/: sensor.c  sensor_ch1.c  setpoints.c
main/storage/inc/: nvs_handler.h  spiffshandler.h
main/storage/src/: nvs_handler.c  spiffs_handler.c
main/webpage/: app.css  index.html
